[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.10"

[dev-dependencies]
# 0.4.0 does not default generate html report, need to install cargo-criterion
criterion = "0.4.0"

[[bench]]
name = "vector"
harness = false